--- a/intro-section-with-dropdown-navigation-main/style.css
+++ b/intro-section-with-dropdown-navigation-main/style.css
@@ -188,6 +188,8 @@ footer {
 /* ------------- Media Query for Mobile ----------------- */
 
 @media (max-width: 480px) {
+  
+  }
   .nav,.btn-group{
     display:none; 
   }
